Bug 510029 - Display scaling causes visual artifacts for Desktop Effects (Mouse Tracker)
Summary: Display scaling causes visual artifacts for Desktop Effects (Mouse Tracker)
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.4.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-28 16:09 UTC by Frederik Siefert
Modified: 2025-12-06 00:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.4
Sentry Crash Report:


Attachments
Track Mouse Effect Artefacts. (214.53 KB, video/webm)
2025-09-28 16:09 UTC, Frederik Siefert
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik Siefert 2025-09-28 16:09:10 UTC
Created attachment 185343 [details]
Track Mouse Effect Artefacts.

SUMMARY
Using a high resolution display with a display scale higher than 100% (tested with 75, 125, 150, 200%)  introduces noticeable jitters for the Mouse Tracker Desktop Effect.

STEPS TO REPRODUCE
1. Set Display Scaling to a value other than 100%
2. Enable the Track Mouse Desktop Effect.
3. Show Track Mouse effect.

OBSERVED RESULT
The rings for the effect will stutter, lag, jump around, and partially disappear.

EXPECTED RESULT
Expected the ring animation to be fluid regardless of Display Scaling.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2
Kernel Version: 6.16.8-arch3-1 (64-bit)
Graphics Platform: Wayland
Comment 1 Akseli Lahtinen 2025-09-29 08:58:31 UTC
Can confirm with 125%.

Operating System: Fedora Linux 42
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.19.0
Qt Version: 6.9.2
Kernel Version: 6.16.8-200.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Vlad Zahorodnii 2025-12-02 15:40:16 UTC
Git commit 027857e7d5f40398db53dd8e858dad0e2210bdc2 by Vlad Zahorodnii.
Committed on 02/12/2025 at 15:40.
Pushed by vladz into branch 'master'.

scene: Fix computed painted area of transformed items with HiDPI

The transform is provided for the logical coordinate system, we need to
map it to the device coordinate system.

It should fix the track mouse effect being glitchy.

M  +6    -3    src/scene/item.cpp

https://invent.kde.org/plasma/kwin/-/commit/027857e7d5f40398db53dd8e858dad0e2210bdc2
Comment 3 Vlad Zahorodnii 2025-12-03 11:06:17 UTC
Git commit a31ff3b3778ca0fd6769a3b059df01e25327a9d6 by Vlad Zahorodnii.
Committed on 03/12/2025 at 09:54.
Pushed by vladz into branch 'Plasma/6.5'.

scene: Fix computed painted area of transformed items with HiDPI

The transform is provided for the logical coordinate system, we need to
map it to the device coordinate system.

It should fix the track mouse effect being glitchy.
(cherry picked from commit 027857e7d5f40398db53dd8e858dad0e2210bdc2)

M  +12   -6    src/scene/item.cpp

https://invent.kde.org/plasma/kwin/-/commit/a31ff3b3778ca0fd6769a3b059df01e25327a9d6