scene: Fix computed painted area of transformed items with HiDPI

The transform is provided for the logical coordinate system, we need to
map it to the device coordinate system.

It should fix the track mouse effect being glitchy.

BUG: 510029